# mental-gym

./: .gitignore  README.md  mental-gym-spec.md  mental_gym.yaml.example  pyproject.toml
docs/: PATTERN.md
hooks/: mental_gym_hook.sh
src/mental_gym/: __init__.py  cli.py  config.py  ui.py
src/mental_gym/commands/: add_topic.py  init.py  review.py  status.py  suggest.py  sync.py  train.py
src/mental_gym/db/: schema.py  store.py
src/mental_gym/engine/: assessor.py  curriculum.py  kb_index.py  kb_sync.py  llm.py  memory.py  reviewer.py  trainer.py
src/mental_gym/exercises/: base.py  connect.py  defend.py  explain.py  predict.py  teach.py  write.py
src/mental_gym/prompts/: evaluation.py  generation.py
