[project]
name = "mental-gym"
version = "0.1.0"
description = "AI-driven deliberate practice for domain expertise"
readme = "mental-gym-spec.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.40.0"]
search = ["sqlite-vec>=0.1.6", "fastembed>=0.6.0"]
all = ["anthropic>=0.40.0", "sqlite-vec>=0.1.6", "fastembed>=0.6.0"]

[project.scripts]
mental-gym = "mental_gym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mental_gym"]
