[project]
name = "mental-gym"
version = "0.1.0"
description = "AI-driven deliberate practice for domain expertise"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Haiwen Huang", email = "andrehuang0@gmail.com"},
]
keywords = ["deliberate-practice", "llm", "spaced-repetition", "expertise", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/andrehuang/mental-gym"
Repository = "https://github.com/andrehuang/mental-gym"
Issues = "https://github.com/andrehuang/mental-gym/issues"

[project.optional-dependencies]
api = ["anthropic>=0.40.0"]
search = ["sqlite-vec>=0.1.6", "fastembed>=0.6.0"]
all = ["anthropic>=0.40.0", "sqlite-vec>=0.1.6", "fastembed>=0.6.0"]

[project.scripts]
mental-gym = "mental_gym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mental_gym"]
